--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <button class="l drum">l</button>
   </div>
 
-
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ By Rohan.
   </footer>
   <script src="./index.js"></script>
 </body>
